<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="ConvertEnvironment" Id="{03869fa8-1755-402e-a7ee-189c483e0438}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ConvertEnvironment
VAR
	WindSpeed1,
	Temperature1,
	Humidity1,
	Rain_analogue1,
	WindDirection,
	Pressure,
	
	WindSpeed2,
	Temperature2,
	Humidity2,
	Rain_analogue2,
	Brightness,
	
	Temperature_Electronics,
	Humidity_Electronics,
	
	TemperatureBay,
	HumidityBay,

	Temperature_Spec,
	Humidity_Spec,
	Windspeed_bay,
	Dust:	REAL;
	
	Rain1Current,
	Rain2Current: REAL;
	
	MaximumWind1, MaximumWind2: REAL;
	DustAvg,
	WindAvg1, Windavg2: FB_TimeAverage;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* convert raw Sensor values to real values *)

(*	rawWindSpeed1				AT%I*:	INT;
	rawTemperature1				AT%I*:	INT;
	rawHumidity1				AT%I*:	INT;
	rawRain_analogue1			AT%I*:	INT;
	rawWindDirection			AT%I*:	INT;
	rawPressure 				AT%I*:	INT;
*) 
WindSpeed1 := 		F_Y(Environment.rawWindSpeed1, 		0, 32767,   0.0, 50.0); // m/s
Temperature1 :=  	F_Y(Environment.rawTemperature1, 	0, 32767, -30.0, 70.0); // °C
Humidity1 :=		F_Y(Environment.rawHumidity1, 		0, 32767,   0.0, 100.0); // %
Rain1Current := 	F_Y(Environment.rawRain_analogue1,	0, 32767,	4.0, 20.0); // mA --> mm/min
IF Rain1Current < 8 THEN
	Rain_analogue1 := 0.0025*Rain1Current - 0.01;
ELSIF Rain1Current >= 8 AND Rain1Current < 12 THEN
	Rain_analogue1 := 0.0225*Rain1Current - 0.17;
ELSIF Rain1Current >= 12 AND Rain1Current < 16 THEN
	Rain_analogue1 := 0.225*Rain1Current - 2.6;
ELSIF Rain1Current >= 16 THEN
	Rain_analogue1 := 2.25*Rain1Current - 35;
END_IF

WindDirection := 	F_Y(Environment.rawWindDirection,	0, 32767,   0.0, 360.0); // m/s
Pressure := 		(Environment.rawPressure / 32767.0) * 10.0 * 92.0 + 600.0; // mBar

(*	
	// Weather Station 2
	rawWindSpeed2				AT%I*:	INT;
	rawTemperature2				AT%I*:	INT;
	rawHumidity2				AT%I*:	INT;
	rawRain_analogue2			AT%I*:	INT;
	Rain_alarm2					AT%I*:	BOOL;
	rawBrightness				AT%I*:	INT;
	rawBrightnessLow			AT%I*:	INT;
	Overcorrect_status2			AT%I*:	BOOL;

*)

WindSpeed2 := 		F_Y(Environment.rawWindSpeed2, 		0, 32767,   0.0, 50.0); // m/s
Temperature2 :=  	F_Y(Environment.rawTemperature2, 	0, 32767, -30.0, 70.0); // °C
Humidity2 :=		F_Y(Environment.rawHumidity2, 		0, 32767,   0.0, 100.0); // %
Rain2Current := 	F_Y(Environment.rawRain_analogue2,	0, 32767,	4.0, 20.0); // mA --> mm/min
IF Rain1Current < 8 THEN
	Rain_analogue2 := 0.0025*Rain2Current - 0.01;
ELSIF Rain1Current >= 8 AND Rain2Current < 12 THEN
	Rain_analogue2 := 0.0225*Rain2Current - 0.17;
ELSIF Rain1Current >= 12 AND Rain2Current < 16 THEN
	Rain_analogue2 := 0.225*Rain2Current - 2.6;
ELSIF Rain1Current >= 16 THEN
	Rain_analogue2 := 2.25*Rain2Current - 35;
END_IF
Brightness :=		F_Y(Environment.rawBrightness, 		0, 32767,   0.0, 150000.0);
IF Brightness < 1000.0 THEN 
					F_Y(Environment.rawBrightnessLow, 	0, 32767,   0.000, 1000.0); // lux
END_IF

Temperature_Electronics :=  F_Y(Environment.rawTemperature_Electronics, 	0, 32767, -30.0, 70.0); // °C
Humidity_Electronics :=		F_Y(Environment.rawHumidity_Electronics, 		0, 32767,   0.0, 100.0); // %
TemperatureBay :=  			F_Y(Environment.rawTemperatureBay, 				0, 32767, -30.0, 70.0); // °C
HumidityBay := 				F_Y(Environment.rawHumidityBay, 				0, 32767,   0.0, 100.0); // %
Temperature_Spec :=  		F_Y(Environment.rawTemperature_Spec, 			0, 32767, -30.0, 70.0); // °C
Humidity_Spec := 			F_Y(Environment.rawHumidity_Spec, 				0, 32767,   0.0, 100.0); // %
Windspeed_bay := 			F_Y(Environment.rawWindSpeedBay, 				0, 32767,   0.0, 40.0); // m/s
DustAvg(IN := F_Y(Environment.rawDust, 			0, 32767,   0.0, 0.1), PT := T#2M, AVG => Dust); // m^3
WindAvg1(IN := F_Y(Environment.rawWindSpeed1, 	0, 32767,   0.0, 50.0), PT := T#2M, MAXAVG=> MaximumWind1);
WindAvg2(IN := F_Y(Environment.rawWindSpeed2, 	0, 32767,   0.0, 50.0), PT := T#2M, MAXAVG=> MaximumWind2);
]]></ST>
    </Implementation>
    <LineIds Name="ConvertEnvironment">
      <LineId Id="3" Count="55" />
      <LineId Id="109" Count="0" />
      <LineId Id="69" Count="6" />
      <LineId Id="2" Count="0" />
      <LineId Id="144" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>